objects/ssot__VideoCall__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationInSecondsQuantity__c</fullName>
        <label>Duration in Seconds</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>Call End Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Video Call Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IntelligenceScoreNumber__c</fullName>
        <label>Intelligence Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCallCoachingIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Call Coaching Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDiarizationOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Diarization Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRecorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToId__c</fullName>
        <label>Related To Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Call Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TranscribedLanguage__c</fullName>
        <label>Transcribed Language</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VendorMeetingId__c</fullName>
        <label>Vendor Meeting ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VendorMeetingKey__c</fullName>
        <label>Vendor Meeting Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VendorName__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VideoCallType__c</fullName>
        <label>Video Call Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VideoCall_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VideoCall_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>VideoCall_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>VideoCall_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VideoCall_RelatedToId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VideoCall_RelatedToId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>VideoCall_RelatedToId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>VideoCall_RelatedToId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VideoCall_RelatedToId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VideoCall_RelatedToId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>VideoCall_RelatedToId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>VideoCall_RelatedToId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VideoCall_RelatedToId_map_Lead_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VideoCall_RelatedToId_map_Lead_Id_N_1</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>VideoCall_RelatedToId_map_Lead_Id_N_1</relationshipLabel>
        <relationshipName>VideoCall_RelatedToId_map_Lead_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726212201426_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VideoCall_RelatedToId_map_Opportunit_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>VideoCall_RelatedToId_map_Opportunit_rel</relationshipLabel>
        <relationshipName>rel_1726212201426_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825151916_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VideoCall_RelatedToId_map_AccountCon_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>VideoCall_RelatedToId_map_AccountCon_rel</relationshipLabel>
        <relationshipName>rel_1726825151916_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>